# pdc-asm4.2

./: .gitignore  Cargo.toml
data/input/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
proto/: mapreduce.proto
res/: workers.yaml
src/: client.rs  gate_keeper.rs  lib.rs  mapper.rs  master.rs  reducer.rs  shuffler.rs  worker.rs
